# rust-async-gql-dataloader

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env
app/: .env  Cargo.toml
app/src/: main.rs
app/src/db/: mod.rs  mysql.rs  sqlite.rs
app/src/errors/: mod.rs
app/src/graphql/: context.rs  mod.rs  mutation.rs  query.rs  subscription.rs
app/src/graphql/mutation/: mod.rs  user.rs
app/src/graphql/objects/: character.rs  droid.rs  episode.rs  human.rs  mod.rs  user.rs
app/src/graphql/query/: mod.rs  user.rs
app/src/models/: droid.rs  episode.rs  human.rs  mod.rs  user.rs
app/src/utils/: env.rs
app/src/web_utils/: handlers.rs  jwt.rs
