[package]
name = "rust-async-gql-dataloader"
version = "0.1.0"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.12.10"
async-graphql-actix-web = "1.4.10"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql", "uuid", "chrono", "sqlite" ] }
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-cors = "0.2.0"
actix-identity = "0.2.0"
env_logger = "0.7.1"
listenfd = "0.3"
jsonwebtoken = "7.1.0"
argon2rs = "0.2.5"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.5"
serde_json = "1.0.53"
serde = { version = "1.0.53", features = ["derive"] }
bytes = "0.5.4"
rand = "0.7.3"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["time", "stream"] }
cuid = { git = "https://github.com/prisma/cuid-rust", branch = "master" }
async-trait = "0.1.31"